fix vertretungsplan cell spacing

--- a/src/scss/widgets/_vertretungsplan.scss
+++ b/src/scss/widgets/_vertretungsplan.scss
@@ -66,7 +66,6 @@
 
       .vp-content {
 
-        margin: .25rem;
         padding: .25rem;
         flex-grow: 1;
 
